comment out test step because it takes forever in docker

--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -4,7 +4,7 @@ COPY --chown=gradle:gradle code/tepid-server /home/gradle/tepid-server
 COPY config/* /etc/tepid/
 
 WORKDIR /home/gradle/tepid-server
-RUN  	gradle test --continue; exit 0
+#RUN  	gradle test --continue; exit 0
 RUN	gradle war
 
 FROM tomcat:8-jre8-alpine
