mount configs as volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,7 @@ version: '3'
 services:
   tepid-server:
     build: ./tomcat
+    volumes:
+      - ./tomcat/config:/etc/tepid
     ports:
       - 80
