added web as a service

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM 	httpd:alpine
 
-COPY	./conf/ /usr/local/apache2/conf/httpd.conf
+#COPY	./config/httpd.conf /usr/local/apache2/conf/httpd.conf
 COPY	./web/	/usr/local/apache2/htdocs
 
 
