--- a/web/config/httpd.conf
+++ b/web/config/httpd.conf
@@ -193,7 +193,7 @@ LoadModule dir_module modules/mod_dir.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 
 <IfModule unixd_module>
 #
@@ -501,3 +501,13 @@ Include conf/extra/proxy-html.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
+
+
+#redirect static pages to dynamic ones
+RewriteEngine on
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-s
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-l
+RewriteCond %{REQUEST_URI} !/wiki/.*
+RewriteRule ^ /index.html [L]
+
