slight changes to apache2 conf

--- a/web/config/httpd.conf
+++ b/web/config/httpd.conf
@@ -250,9 +250,9 @@ ServerAdmin admin@science.mcgill.ca
 # symbolic links and aliases may be used to point to other locations.
 #
 DocumentRoot "/usr/local/apache2/htdocs"
-<Directory "/usr/local/apache2/htdocs">
+<Directory "/usr/local/apache2/htdocs/">
     Options FollowSymLinks
-    AllowOverride None
+    AllowOverride All
     Require all granted
 </Directory>
 
