fix permissions for web

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -8,5 +8,9 @@ RUN	npm -g install bower \
 
 FROM 	httpd:alpine
 
-COPY	./config/httpd.conf /usr/local/apache2/conf/httpd.conf
-COPY	--from=0	/usr/local/tepid	/usr/local/apache2/htdocs
+COPY    ./config/httpd.conf /usr/local/apache2/conf/httpd.conf
+COPY	--from=0 \
+	--chown=www-data:www-data \
+ 	/usr/local/tepid	/usr/local/apache2/htdocs
+RUN	find /usr/local/apache2/htdocs -type d -exec chmod 755 {} \; &&\
+	find /usr/local/apache2/htdocs -type f -exec chmod 644 {} \;
