CI fixed copy of configs

--- a/CI/Dockerfile
+++ b/CI/Dockerfile
@@ -10,10 +10,10 @@ RUN	apt-get update \
 
 RUN	wget -O /usr/local/bin/gitlab-runner https://gitlab-runner-downloads.s3.amazonaws.com/latest/binaries/gitlab-runner-linux-amd64 \
 	&& chmod +x /usr/local/bin/gitlab-runner \
-	&& adduser -S -h /home/gitlab-runner -s /bin/bash gitlab-runner \
-	&& gitlab-runner install --user=gitlab-runner --working-directory=/home/gitlab-runner \
+	&& adduser --system --home /home/gitlab-runner --shell /bin/bash gitlab-runner \
+	&& gitlab-runner install --user=gitlab-runner --working-directory=/home/gitlab-runner
 
-COPY	./config/config.toml /etc/gitlab-runner/aconfig.toml
+COPY	config/config.toml /etc/gitlab-runner/config.toml
 
 #ENTRYPOINT	["gitlab-runner", "start"]
 ENTRYPOINT	["/bin/bash"]
