Moved build to separate container
This allows an ad-hoc version of tepid to be built.
This is useful for testing uncertain things without having to make many useless commits

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,15 @@ services:
       - 8443
     restart: unless-stopped
 
+  build:
+    depends_on:
+      - couchdb
+    build: ./gradle
+    volumes:
+      - ./tomcat/config:/etc/tepid
+      - war:/var/lib/tomcat8/webapps
+    restart: "no"
+
   tepid-web:
     build: ./web
     ports:
