--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,8 @@ services:
       - 443
     restart: unless-stopped
 
-  gitlab-runner:
-    container_name: CI
-    build: ./CI
+  CI:
+    build: ./gitlab-runner
     volumes:
       - war:/var/lib/tomcat8/webapps
       - ./tomcat/config:/etc/tepid
