--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,26 @@
-version: '3'
+version: '3.5'
 
 services:
 
-  couchdb:
-    build: ./couchdb
-    volumes:
-      - ./couchdb/config:/opt/couchdb/etc/local.d
-#      - ./couchdb/data:/opt/couchdb/data
-    ports:
-      - 5984
+#  db:
+#    build: ./couchdb
+#    volumes:
+#      - ./couchdb/config:/opt/couchdb/etc/local.d
+##      - ./couchdb/data:/opt/couchdb/data
+#    ports:
+#      - 5984
+#    restart: unless-stopped
+
+  db:
+    build: ./postgresql
     restart: unless-stopped
+#    environment:
+#      POSTGRES_PASSWORD: example
+    env_file: db.env
 
   tepid-server:
     depends_on:
-      - couchdb
+      - db
     build: ./tomcat
     volumes:
       - ./tomcat/config:/etc/tepid
@@ -25,7 +32,7 @@ services:
 
   build:
     depends_on:
-      - couchdb
+      - db
     build: ./gradle
     volumes:
       - ./tomcat/config:/etc/tepid
