--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,6 +1,6 @@
 ###### Tomcat ######
 FROM 	tomcat:8-jre8-alpine
 
-RUN 	/bin/sh -c 'apk add --no-cache samba-client ghostscript'
+RUN 	/bin/sh -c 'apk add --no-cache samba-client ghostscript postgresql-client'
 
 CMD 	["catalina.sh", "run"]
